# aigov-shield

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  ruff.toml  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: benchmark_guards.py
docs/: accountability-guide.md  api-reference.md  architecture.md  getting-started.md  integrations.md  measurement-guide.md  nist-alignment.md  prevention-guide.md
examples/: compliance_evaluation.py  fastapi_service_governance.py  langchain_rag_governance.py  nist_report_generation.py  openai_chat_governance.py  quickstart.py
src/aigov_shield/: __init__.py  _version.py
src/aigov_shield/accountability/: __init__.py  base.py  chain_of_custody.py  decision_recorder.py  document_tracker.py  evidence_logger.py  export.py
src/aigov_shield/cli/: __init__.py  main.py
src/aigov_shield/core/: __init__.py  config.py  exceptions.py  registry.py  types.py
src/aigov_shield/integrations/: __init__.py  fastapi_middleware.py  langchain_callback.py  openai_wrapper.py
src/aigov_shield/measurement/: __init__.py  base.py  bias_evaluator.py  compliance_scorer.py  drift_monitor.py  grounding_evaluator.py  pii_evaluator.py  privilege_evaluator.py
src/aigov_shield/prevention/: __init__.py  base.py  guard_chain.py  pii_guard.py  privilege_guard.py  prompt_injection_guard.py  topic_guard.py  toxicity_guard.py
src/aigov_shield/reporting/: __init__.py  html_report.py  json_report.py  nist_report.py
tests/: conftest.py
tests/accountability/: test_chain_of_custody.py  test_decision_recorder.py  test_document_tracker.py  test_evidence_logger.py  test_export.py
tests/integrations/: test_fastapi_middleware.py  test_langchain_callback.py  test_openai_wrapper.py
tests/measurement/: test_bias_evaluator.py  test_compliance_scorer.py  test_drift_monitor.py  test_grounding_evaluator.py  test_pii_evaluator.py  test_privilege_evaluator.py
tests/prevention/: test_guard_chain.py  test_pii_guard.py  test_privilege_guard.py  test_prompt_injection_guard.py  test_topic_guard.py  test_toxicity_guard.py
tests/reporting/: test_html_report.py  test_nist_report.py
