[metadata]
name = aigov-shield
description = Production-ready AI governance infrastructure for regulated industries
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
author = Gary Atwal
author_email = garyatwal2017@gmail.com

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
